# typer_demo_2022

./: pyproject.toml
.github/workflows/: cicd.yml
tests/: test_main.py
