[tool.poetry]
name = "typer_demo_2022"
version = "0.1.0"
description = "Demo de typer para gulag"
authors = ["Alex Pineda <alejandro.deathscythe@google.com>"]
license = "GPL v3"

[tool.poetry.scripts]
hola-mundo = "typer_demo_2022.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
